# social-media-etl

./: .coverage  .gitignore  Dockerfile  README.md  frontend_specs.md  pyproject.toml  requirements-dev.txt  requirements.txt  specs.md
app/ai/: __init__.py  assistant.py  sql_generator.py
app/apify/: __init__.py
app/config/: settings.py
app/database/: __init__.py  schema_metadata.py  sql_engine.py  supabase_client.py
app/embeddings/: __init__.py  providers.py  service.py
app/gradio/: __init__.py  analytics_tab.py  app.py  chat_tab.py
app/ingestion/: __init__.py  pipeline.py
app/logging/: __init__.py  logger.py
app/normalization/: __init__.py  common.py  instagram.py  twitter.py  youtube.py
app/prompts/: __init__.py  templates.py
app/repositories/: __init__.py  author_repository.py  base.py  channel_repository.py  (+13 more)
docs/: ai_reference.md  api_documentation.md  app_code_index.md  architecture.md  deployment_guide.md  developer_guide.md  embedding_model_explained.md  environment_variables.md  er_diagram.md  example_workflows.md  infra_utils_reference.md  models_reference.md  pipeline_reference.md  repositories_reference.md  scraping_normalization_reference.md  sequence_diagrams.md  services_ui_reference.md  setup_guide.md
logs/: app.jsonl  errors.jsonl
migrations/: 0001_extensions_and_functions.sql  0002_core_content_tables.sql  0003_chat_and_logging_tables.sql  0004_embeddings_and_documents.sql  0005_postgrest_grants.sql  0006_saved_searches.sql
scripts/: launch_gradio.py  print_schema.py  run_migrations.py  run_scrape.py
tests/: conftest.py
(+47 files in other folders)
