[project]
name = "social-intel-platform"
version = "0.1.0"
description = "Multi-platform social media intelligence platform (Apify + Supabase + Pydantic + Gradio + AI agent)"
requires-python = ">=3.12"
readme = "README.md"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_ignores = true
exclude = ["tests/", "scripts/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --cov=app --cov-report=term-missing"

[tool.coverage.run]
source = ["app"]
omit = ["app/gradio/*"]
